--- a/archive/static/archive/style.css
+++ b/archive/static/archive/style.css
@@ -1,3 +1,53 @@
+#banner-top {
+/*  position: absolute; */
+margin: auto;
+  width:95%;
+  overflow: auto;
+  align:center;
+
+  border: 1px solid DarkGreen;
+  outline-style: double;
+  outline-color: Green;
+  background-color: YellowGreen;
+  color : white;
+}
+#banner-top-left {
+  float: left;
+  width:45%;
+  padding 10px;
+  align:left;
+  text-align:left;
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+#banner-top-right {
+  /* margin: auto; */
+  float: right;
+  width:45%;
+  padding 10px;
+  align:right;
+  text-align:right;
+  text-transform: uppercase;
+  /* font-size:60%; */
+  font-style: normal;
+  font-family: "Arial", Arial, Sans-serif;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+#page-content {
+  margin: auto;
+  position: relative;  top: 10px; /* shifts the whole block down */
+  width:90%;
+  border: 1px solid DarkGreen;
+  outline-style: double;
+  outline-color: Green;
+  background-color: white;
+  color : DarkGreen;
+  align-self:center;
+}
+
 li a {
     color: green;
 }
