Initialized the login/logout process

--- a/archive/templates/archive/skeleton-base.html
+++ b/archive/templates/archive/skeleton-base.html
@@ -9,7 +9,7 @@
 <body>
     <div id="banner-top">
       <div id="banner-top-left">USER < {{user.username}} ></div>
-      <div id="banner-top-right"><a href="">logout</a></div>
+      <div id="banner-top-right"><a href="/archive/logout">logout</a></div>
     </div>
     <div id="page-content">
         {% block page_content %}{% endblock %}
