Added most of the read access views.

--- a/archive/templates/archive/skeleton-base.html
+++ b/archive/templates/archive/skeleton-base.html
@@ -17,9 +17,9 @@
       <div id="page-sidebar">
         <ul>
           <li><a href="/archive">Games</a></li>
-          <li><a href="/players">Players</a></li>
-          <li><a href="/scenario">Scenarii</a></li>
-          <li><a href="/universes">Universes</a></li>
+          <li><a href="/archive/player">Players</a></li>
+          <li><a href="/archive/scenario">Scenarii</a></li>
+          <li><a href="/archive/universe">Universes</a></li>
         </ul>
       </div>
 
