--- a/archive/templates/archive/cycle.html
+++ b/archive/templates/archive/cycle.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <p class="title">Detail view for game cycle: {{cycle.codename}}</p>
-<p> scenario: <a href="">{{cycle.scenario.title}}</a><p>
+<p> scenario: <a href="/archive/scenario/{{cycle.scenario.pk}}">{{cycle.scenario.title}}</a><p>
 {% if my_session_list %}
 <p> Sessions:
     <ul>
