Bug fixes in the db, added the author view (resolves #6), removed the trailing coma in the players list of the sessions in the cycle view (fixes #9).

--- a/archive/templates/archive/cycle.html
+++ b/archive/templates/archive/cycle.html
@@ -12,7 +12,7 @@
       <li>
         (<a href="/archive/session/{{session.pk}}">{{ session.pk }}</a>)
         {{session.date}}
-        [{% for p in cycle.firstSession.players.all %}{{p.nickName}}, {% endfor %}]
+        [[ {{ session.players_string }} ]]
       </li>
     {% endfor %}
     </ul>
