--- a/archive/templates/archive/skeleton-base.html
+++ b/archive/templates/archive/skeleton-base.html
@@ -19,6 +19,7 @@
           <li><a href="/archive">Games</a></li>
           <li><a href="/archive/player">Players</a></li>
           <li><a href="/archive/scenario">Scenarii</a></li>
+          <li><a href="/archive/authors">Authors</a></li>
           <li><a href="/archive/universe">Universes</a></li>
         </ul>
       </div>
