--- a/archive/templates/archive/skeleton-base.html
+++ b/archive/templates/archive/skeleton-base.html
@@ -17,6 +17,7 @@
       <div id="page-sidebar">
         <ul>
           <li><a href="/archive">Games</a></li>
+          <li><a href="/archive/sessions">Sessions</a></li>
           <li><a href="/archive/player">Players</a></li>
           <li><a href="/archive/scenario">Scenarii</a></li>
           <li><a href="/archive/authors">Authors</a></li>
