--- a/archive/templates/archive/authors.html
+++ b/archive/templates/archive/authors.html
@@ -2,8 +2,10 @@
 
 {% block page_title %}  List of authors for user: {{user.username}} {% endblock %}
 
+
+{% block page_content_title %}Liste de mes auteurs{% endblock %}
+
 {% block page_content %}
-Hello {{user.username}}, here are your registered authors:
 {% if my_list_of_authors %}
     <ul>
     {% for author in my_list_of_authors %}
