--- a/archive/templates/archive/universe.html
+++ b/archive/templates/archive/universe.html
@@ -2,11 +2,11 @@
 
 {% block page_title %}  Scenario {{universe.name}} {% endblock %}
 
+{% block page_content_title %}Détail univers{% endblock %}
+
 {% block page_content %}
-<p>Hello {{user.username}}, here are detailes about your registered universe:
 <ul>
-  <li>Name: {{universe.name}}</li>
-  <li>Comments: {{universe.comment}}</li>
+  <li>Nom: {{universe.name}}</li>
+  <li>Commentaires: {{universe.comment}}</li>
 </ul>
-</p>
 {% endblock %}
