--- a/archive/templates/archive/skeleton-base.html
+++ b/archive/templates/archive/skeleton-base.html
@@ -10,6 +10,7 @@
 
     <div id="banner-top">
       <div id="banner-top-left">USER < {{user.username}} ></div>
+      <div id="banner-top-center">{% block message %} {% endblock %}</div>
       <div id="banner-top-right"><a href="/archive/logout">logout</a></div>
     </div>
 
