(i) Minor bug fix: for some reason session view showed the players of the first session of a cycle. (ii) Player adjunction can be performed from the player detailed view (fixes #12).

--- a/archive/templates/archive/player.html
+++ b/archive/templates/archive/player.html
@@ -8,6 +8,7 @@
 
 {% block page_content_menu %}
 <ul>
+   <li><a href="/archive/player-add">+Joueur</a></li>
    <li><a href="/archive/player-del/{{player.pk}}">Supprimer</a></li>
    <li><a href="/archive/player-mod/{{player.pk}}">Modifier</a></li>
 </ul>
