Explicitely created and used ('through' parameter) the intermediary tables for the two ManyToManyFields. The objective was to allow the use of on_delete:PROTECT, which is absent from the ManyToMany field. As a result of this decision I had to dump the whole database and start anew.
Started to split views.py in several dedicated view packages.

Universes and authors can be added, modified, removed.

--- a/archive/templates/archive/author.html
+++ b/archive/templates/archive/author.html
@@ -2,7 +2,17 @@
 
 {% block page_title %}  RPG Archive [{{user.username}}] -- Details for author {{author.name}}{% endblock %}
 
+{% block message %}{{message}}{% endblock %}
+
 {% block page_content_title %}Détail auteur{% endblock %}
+
+{% block page_content_menu %}
+<ul>
+   <li><a href="/archive/author-add">+Auteur</a></li>
+   <li><a href="/archive/author-del/{{author.pk}}">Supprimer</a></li>
+   <li><a href="/archive/author-mod/{{author.pk}}">Modifier</a></li>
+</ul>
+{% endblock %}
 
 {% block page_content %}
     <ul>
