--- a/archive/templates/archive/authors.html
+++ b/archive/templates/archive/authors.html
@@ -2,13 +2,19 @@
 
 {% block page_title %}  List of authors for user: {{user.username}} {% endblock %}
 
+{% block message %}{{message}}{% endblock %}
 
 {% block page_content_title %}Liste de mes auteurs{% endblock %}
 
+{% block page_content_menu %}
+<ul>
+   <li><a href="/archive/author-add">+Auteur</a></li>
+ </ul>
+{% endblock %}
 {% block page_content %}
-{% if my_list_of_authors %}
+{% if my_authors %}
     <ul>
-    {% for author in my_list_of_authors %}
+    {% for author in my_authors %}
     <li><a href="/archive/author/{{author.pk}}">{{ author.name }}</a> {% if author.contact %}({{ author.contact }}) {% endif %}</li>
     {% endfor %}
     </ul>
