--- a/archive/templates/archive/universes.html
+++ b/archive/templates/archive/universes.html
@@ -2,7 +2,15 @@
 
 {% block page_title %}  List of universes for user: {{user.username}} {% endblock %}
 
+{% block message %}{{message}}{% endblock %}
+
 {% block page_content_title %}Liste de mes univers{% endblock %}
+
+{% block page_content_menu %}
+<ul>
+   <li><a href="/archive/universe-add">+Univers</a></li>
+</ul>
+{% endblock %}
 
 {% block page_content %}
 {% if my_universes %}
