Minor bug fixes in views and templates for Universe, Author and Player.

--- a/archive/templates/archive/author-form.html
+++ b/archive/templates/archive/author-form.html
@@ -1,12 +1,12 @@
 {% extends "archive/skeleton-base.html" %}
 
-{% block page_title %}   {% endblock %}
+{% block page_title %} RPGArchive - Formulaire auteur  {% endblock %}
 
 {% block page_content_title %}
-Formulaire auteur
-{% if mode == "add" %} en addition
-{% elif mode == "mod" %} en modification
+{% if mode == "add" %} Ajouter
+{% elif mode == "mod" %} Modifier
 {% endif %}
+un joueur
 {% endblock %}
 
 {% block page_content %}
