--- a/archive/templates/archive/player-form.html
+++ b/archive/templates/archive/player-form.html
@@ -1,6 +1,6 @@
 {% extends "archive/skeleton-base.html" %}
 
-{% block page_title %}   {% endblock %}
+{% block page_title %}RPGArchive - formulaire joueur{% endblock %}
 
 {% block page_content_title %}Ajouter un joueur{% endblock %}
 
