--- a/archive/templates/archive/universe-form.html
+++ b/archive/templates/archive/universe-form.html
@@ -1,12 +1,12 @@
 {% extends "archive/skeleton-base.html" %}
 
-{% block page_title %}   {% endblock %}
+{% block page_title %} RPGArchive - Formulaire univers {% endblock %}
 
 {% block page_content_title %}
-Formulaire univers
-{% if mode == "add" %} en addition
-{% elif mode == "mod" %} en modification
+{% if mode == "add" %} Ajouter
+{% elif mode == "mod" %} Modifier
 {% endif %}
+un univers
 {% endblock %}
 
 {% block page_content %}
