Added Scenario operations (add,mod,del).
Added a "+" sign on the universe line of the Scenario view, this will allow for quick creation of a universe while creating a scenario.

--- a/archive/templates/archive/scenarii.html
+++ b/archive/templates/archive/scenarii.html
@@ -2,8 +2,15 @@
 
 {% block page_title %}  List of scenarii for user: {{user.username}} {% endblock %}
 
+{% block message %}{{message}}{% endblock %}
+
 {% block page_content_title %}Liste de mes scénars{% endblock %}
 
+{% block page_content_menu %}
+<ul>
+   <li><a href="/archive/scenario-add">+scénario</a></li>
+</ul>
+{% endblock %}
 {% block page_content %}
 {% if my_scenarii %}
     <ul>
