--- a/archive/templates/archive/skeleton-base.html
+++ b/archive/templates/archive/skeleton-base.html
@@ -18,7 +18,7 @@
       <div id="page-sidebar">
         <div id="page-global-menu">
           <ul>
-            <li><a href="/archive">Parties</a></li>
+            <li><a href="/archive/cycle">Parties</a></li>
             <li><a href="/archive/sessions">Sessions</a></li>
             <li><a href="/archive/player">Joueurs</a></li>
             <li><a href="/archive/scenario">Scénars</a></li>
